# Bildung

./: .gitignore  README.md  create_db.py  instructorlogin.html  pyproject.toml  requirements.txt  studentlogin.css  studentlogin.html  stuinst.html  urls.py  uv_setup.md
aiassist/: app.py  rag_agent.py  search_engine.py
core/: apps.py  asgi.py  middleware.py  settings.py  urls.py
core/utils/: db_init.py
courses/: apps.py  forms.py  instructor_urls.py  middleware.py  models.py  signals.py  student_urls.py  urls.py  utils.py  views.py
courses/migrations/: 0012_course_category_lectureprogress_duration_and_more.py  0013_liveclass.py  0014_alter_liveclass_instructor.py  0015_courseevent_date.py  0016_liveclass_meeting_link.py  0017_lecturequestion.py  0018_questionreply.py  0019_alter_lecturequestion_options_and_more.py  0020_coursereview.py  0021_liveclassattendance_notification.py  0022_create_missing_notification.py  0023_remove_courseevent_date.py  0024_courseevent_reminder_sent_liveclass_reminder_sent.py  0025_module_order_assignment.py  0025_rename_feedback_text_feedback_text_and_more.py  0026_liveclass_order.py  0026_remove_notification_url.py  0027_course_structure_json.py  0028_alter_module_course.py  0029_courseblock.py  0030_lecture_order.py  0031_create_missing_notification.py  0031_rename_order_assignment_assignment_order_and_more.py
courses/services/: recommendation_service.py
fastapi_app/: config.py  database.py  dependencies.py  main_app.py
fastapi_app/models/: course.py  lecture.py  module.py  quiz.py
fastapi_app/rag/: cache.py  embeddings.py  pdf_loader.py  question_generator.py  text_splitter.py  validator.py  vector_store.py  video_loader.py
fastapi_app/routes/: ai_assist.py  quiz.py  quiz_manual.py  quiz_rag.py
fastapi_app/services/: quiz_access.py  rag_agent.py
home/: views.py
media/Q_A/: Bildung_QA.xlsx
quizzes/: admin.py  models.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_quiz_order.py
sagarika/: pyvenv.cfg
sagarika/Scripts/: activate  activate.bat
users/: adapters.py  admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  student_urls.py  urls.py  utils.py  views.py
users/migrations/: 0005_remove_user_bio_remove_user_date_of_birth_and_more.py  (+9 more)
(+135 files in other folders)
