[project]
name = "bildung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.2",
    "django>=5.2.9",
    "django-crispy-forms>=2.5",
    "mysqlclient>=2.2.7",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.6",
    "social-auth-app-django>=5.6.0",
    "subdomains>=3.0.1",
]
