[project]
name = "bildung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.2",
    "django>=5.2.9",
    "django-crispy-forms>=2.5",
    "dspy-ai>=3.1.0",
    "fastapi>=0.128.0",
    "mysqlclient>=2.2.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.6",
    "sentence-transformers>=5.2.0",
    "social-auth-app-django>=5.6.0",
    "subdomains>=3.0.1",
    "uvicorn[standard]>=0.40.0",
]
