[project]
name = "bildung"
version = "0.1.0"
description = "AI-powered e-learning platform with Django, FastAPI, and RAG-based systems"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "Django==5.2.8",
    "channels==4.3.1",
    "daphne==4.2.1",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "starlette==0.50.0",
    "social-auth-app-django==5.6.0",
    "django-allauth==65.14.0",
    "mysqlclient==2.2.7",
    "SQLAlchemy==2.0.45",
    "alembic==1.18.3",
    "dspy-ai==3.1.2",
    "dspy==3.1.2",
    "openai==2.15.0",
    "litellm==1.81.6",
    "sentence-transformers==5.2.0",
    "faiss-cpu==1.13.2",
    "langchain==1.2.4",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langgraph==1.0.6",
    "langsmith==0.6.4",
    "torch==2.9.1",
    "transformers==4.57.6",
    "numpy==2.3.5",
    "scikit-learn==1.8.0",
    "pandas==3.0.0",
    "openpyxl==3.1.5",
    "pillow==12.0.0",
    "reportlab==4.4.4",
    "pypdf==6.6.0",
    "ffmpeg-python==0.2.0",
    "openai-whisper==20250625",
    "python-dotenv==1.2.1",
    "pydantic-settings==2.12.0",
    "requests==2.32.5",
]
